--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -185,11 +185,11 @@ Despite these complexities of within-canopy transport, wind speeds are generally
 This holds true across the range of forest types [Fig. `r fig_NEON_vertical`e, Supporting Information Figure `r SIfig_NEON_all`, @barnardSeasonalVariationCanopy2016; @mcgregorTreeHeightLeaf2021; @juckerCanopyStructureTopography2018; @mullerEvidenceEfficientNonevaporative2021; @hanberryOpenForestEcosystems2020; @hanberryReconceptualizationOpenOak2018] and savannas [@curtis_intracanopy_2019;@johnstonWhatLiesVerticalinpress]. 
 Thus, upper canopy leaves have substantially higher boundary layer conductance ($g_b$) and therefore greater potential for exchange of both mass and sensible heat exchange (see sections 2.2, 4.1).
 
-Atmospheric concentrations of CO~2~ and water vapor can also vary across the vertical gradient.
+Atmospheric concentrations of CO~2~ and water vapor can also vary vertically.
 Atmospheric CO~2~ concentrations tend to be higher near the ground at night, associated with plant and soil respiration, although the elevated CO~2~ quickly dissipates during the day [@koike_leaf_2001; @yang_spatial_1999]. 
-Vertical CO~2~ concentration gradients can influence the ratio of leaf intercellular CO~2~ to ambient CO~2~ ($c_{i}/c_{a}$) calculated from $\delta^{13}C$, and refixation of respired CO~2~ vertically, where both tend to be higher at lower heights (Table 1). 
-Particularly, understory seedlings benefit from elevated CO~2~ by having highest rates of CO~2~ refixation [@brooksVerticalGradientsPhotosynthetic1997]. 
-However, given that differences are negligible for most of the day when photosynthesis is occurring, gradients in CO~2~ concentrations are unlikely to significantly affect the energy balance and metabolism of leaves across the forest vertical gradient.
+Vertical CO~2~ concentration gradients can drive gradients in the ratio of leaf intercellular CO~2~ to ambient CO~2~ ($c_{i}/c_{a}$) calculated from $\delta^{13}C$, and in rates of refixation of respired CO~2~ vertically, both of which tend to be higher at lower heights (Table 1). 
+Particularly, understory seedlings benefit from elevated CO~2~ by having higher rates of CO~2~ refixation [@brooksVerticalGradientsPhotosynthetic1997]. 
+However, given that differences are negligible for most of the day when photosynthesis is occurring, gradients in CO~2~ concentrations concentrations likely have little effect on energy balance and metabolism across the vertical gradient.
  
 Relative humidity (RH) tends to be higher in the understory and decreases with height, although this trend is absent in open forests [Fig. `r fig_NEON_vertical`f, Supporting Information Figure `r SIfig_NEON_all`, e.g., @juckerCanopyStructureTopography2018; @mcgregorTreeHeightLeaf2021; @binLeafTraitExpression2022].
 Dense-canopy forests maintain higher daily maximum RH in the understory than open forests and nearby open areas, an effect that is greater in wetter conditions, and warmer months [@vonarxSpatiotemporalEffectsForest2012a; @hanberryOpenForestEcosystems2020]. 
@@ -197,12 +197,11 @@ In combination with $T_{air}$ and $T_{leaf}$, RH determines leaf-to-air vapor pr
 Especially when canopy height and LAI are large, maximum $T_{air}$ and VPD are reduced in the understory [@juckerCanopyStructureTopography2018].
 The implication is that upper canopy leaves have higher $g_b$ and associated potential for water and heat loss (see sections 2.2, 4.1).
 
-Vertical gradients in air temperature ($T_{air}$) across forest profiles are variable (Fig. `r fig_NEON_vertical`, Supporting Information Figure `r SIfig_NEON_all`), being dependent upon factors such as vegetation type, local topography, vertical air mixing, cloud cover, sensible heat emissions, and times of day and year [@defrenneForestMicroclimatesClimate2021; @zellweger_seasonal_2019]. 
-It is most commonly the case that attenuation of radiation and vertical transport of sensible heat by the canopy buffers the lower canopy and understory from large diel and seasonal swings in air temperature [@defrenneForestMicroclimatesClimate2021; @haesenForestTempSubcanopyMicroclimate2021a; @zellweger_seasonal_2019].
+Vertical gradients in air temperature ($T_{air}$) differ widely (Fig. `r fig_NEON_vertical`, Supporting Information Figure `r SIfig_NEON_all`) and depend on factors such as vegetation type, local topography, vertical air mixing, cloud cover, sensible heat emissions, and times of day and year [@defrenneForestMicroclimatesClimate2021; @zellweger_seasonal_2019]. 
+Commonly, attenuation of radiation and vertical transport of sensible heat by the canopy buffers the lower canopy and understory from large diel and seasonal swings in air temperature [@defrenneForestMicroclimatesClimate2021; @haesenForestTempSubcanopyMicroclimate2021a; @zellweger_seasonal_2019].
 Typically, diel temperature range is smaller beneath dense canopies than above, resulting from lower maximum daytime $T_{air}$ and warmer nighttime minimum $T_{air}$ than beneath open canopies or in nearby clearings [<!-- @missonPartitioningForestCarbon2007--> @defrenneForestMicroclimatesClimate2021; @vonarxSpatiotemporalEffectsForest2012a; <!--@defrenneGlobalBufferingTemperatures2019; @davisMicroclimaticBufferingForests2019--> @zellweger_seasonal_2019 <!--@ramboCanopyMicroclimateResponse2009; @binLeafTraitExpression2022; @haesenForestTempSubcanopyMicroclimate2021a; @meeussenMicroclimaticEdgetointeriorGradients2021-->]. 
 Notably, buffering against high maximum daytime $T_{air}$ becomes weaker and can be reversed as canopies become more open [Supporting Information Figure `r SIfig_NEON_all`,@curtis_intracanopy_2019; @meeussenMicroclimaticEdgetointeriorGradients2021]. 
-Analogous to a 'canopy greenhouse effect', in open forests, below-canopy maximum $T_{air}$ can be warmer than canopy $T_{air}$.
-This is due to turbulent air mixing and the thermal radiative flux from the soil and the canopy that is intercepted by lower-canopy layers [e.g., OSBS, Fig. `r fig_NEON_vertical`g, Supporting Information Figure `r SIfig_NEON_all`b, <!--@hadleyInfluenceKrummholzMat1987--> @banerjeeExplainingConvectorEffect2017; @curtis_intracanopy_2019;<!--@zweifelMiddayStomatalClosure2002; @ramboCanopyMicroclimateResponse2009; @hardwickRelationshipLeafArea2015-->; @mullerEvidenceEfficientNonevaporative2021].
+Analogous to a 'canopy greenhouse effect', in open forests, below-canopy maximum $T_{air}$ can be warmer than canopy $T_{air}$, due to turbulent air mixing and interception of thermal radiative flux from the soil and the canopy by lower-canopy layers [e.g., OSBS, Fig. `r fig_NEON_vertical`g, Supporting Information Figure `r SIfig_NEON_all`b; <!--@hadleyInfluenceKrummholzMat1987--> @banerjeeExplainingConvectorEffect2017; @curtis_intracanopy_2019;<!--@zweifelMiddayStomatalClosure2002; @ramboCanopyMicroclimateResponse2009; @hardwickRelationshipLeafArea2015--> @mullerEvidenceEfficientNonevaporative2021].
 These usually-modest gradients in $T_{air}$ combine with the above-described gradients in micrometeorological conditions to shape $T_{leaf}$ patterns within canopies.
 
 ## 2. Leaf temperature 
