--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -214,45 +214,43 @@ $T_{leaf}$ is usually within a few degrees of $T_{air}$ [@cavaleriColdbloodedFor
 
 ### 2.1. Biophysical drivers of $T_{leaf}$
 
-Fundamentally, $T_{leaf}$ is determined by the energy balance of a leaf and can be estimated based on biophysical principles, where $T_{leaf}-T_{air}$ is a function of energy input from net radiation ($R_n$, including shortwave and longwave) minus heat lost to the environment [Fig. `r fig_leaf_T`, @campbell_introduction_1998; @muir_tealeaves_2019].
-High $R_n$ loads can elevate $T_{leaf}$ dramatically above $T_{air}$ (Fig. `r fig_leaf_T`a). 
+Fundamentally, $T_{leaf}$ is determined by the energy balance and can be estimated based on biophysical principles: $T_{leaf}-T_{air}$ depends on energy input from net radiation ($R_n$, including shortwave and longwave) minus heat lost to the environment [Fig. `r fig_leaf_T`, @campbell_introduction_1998; @muir_tealeaves_2019].
+High $R_n$ loads can elevate $T_{leaf}$ above $T_{air}$ (Fig. `r fig_leaf_T`a). 
 Sensible heat flux between leaf and air is regulated by leaf boundary layer conductance, which is greater in smaller leaves (Fig. `r fig_leaf_T`d) and under higher wind speeds (Fig. `r fig_leaf_T`b). 
-Latent heat flux ($\lambda E$) through transpiration has a strong cooling effect, and is determined by stomatal and boundary layer conductances ($g_s$ and $g_b$) and VPD:$g_b$ increases with wind speed, and $g_s$ generally declines as VPD increases due to stomatal closure [@darwinIXObservationsStomata1898; @mottStomatalResponsesHumidity1991].
+Latent heat flux ($\lambda E$) through transpiration cools the leaf, and is determined by stomatal and boundary layer conductances ($g_s$ and $g_b$) and VPD:$g_b$ increases with wind speed, and $g_s$ generally declines as VPD increases due to stomatal closure [@darwinIXObservationsStomata1898; @mottStomatalResponsesHumidity1991].
 Therefore, $T_{leaf}-T_{air}$ decreases in magnitude with wind speed [Fig. `r fig_leaf_T`b, @daudetWindSpeedLeaf1999], increases with RH (Fig. `r fig_leaf_T`c), increases with leaf size (Fig. `r fig_leaf_T`d), and $T_{leaf}$ decreases absolutely with $g_s$ (Fig. `r fig_leaf_T`e).
 
 ![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the difference between leaf and air temperatures, $T_{Leaf}-T_{air}$, in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf characteristic dimension, and (e) stomatal conductance.** Leaf temperatures were modeled using the  *tealeaves* R package of @muir_tealeaves_2019 parameterized to represent a broadleaf species (*Quercus rubra* L.) in a mesic temperate forest (Harvard Forest, Massachusetts, USA) under hypothetical moist and drought conditions, as detailed in Supplementary Information Methods `r appendix_tealeaves_methods`. In each scenario, the independent variable was allowed to vary while other parameters were held constant at the values given in the table of biophysical constants. Dots along each line correspond to the biophysical constant assigned for the independent variable in the other scenarios, and therefore represent the modeled value for $T_{Leaf}-T_{air}$ with all parameters set to the biophysical constants given in the table. Biohphysical constants in the the table include: shortwave radiation (swr), wind speed (ws), relative humidity (rh), leaf characteristic dimension (lcd), stomatal conductance (gs), air temperature (tair). ](leaf_energy_balance/fig3_leafenergy.png)
 
 Under hot and dry conditions, leaves face a trade-off between $T_{leaf}$ regulation and water conservation [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994]. 
-With adequate water, high $\lambda E$ can facilitate heat dissipation, particularly for leaves with smaller size (higher $g_b$) [@songTreeSurfaceTemperature2020; @dongBiophysicalHomoeostasisLeaf2017; @konradLeafTemperatureIts2021a; @leighInfluenceLeafSize2017; @leuzingerTreeSpeciesDiversity2007].
-However, when leaf water demand (determined by VPD and stomatal opening) exceeds the rate of supply, stomata close to conserve water, increasing $T_{leaf}$ [Fig. `r fig_leaf_T`e, @fauset_differences_2018].
-Therefore, at high solar radiation loads, leaves can maintain $T_{leaf}$ closer to $T_{air}$ at maximum $g_s$, but during $g_s$ limitation, solar radiation can drastically elevate $T_{leaf}$ above $T_{air}$, especially for larger leaves [@fauset_differences_2018; @songTreeSurfaceTemperature2020; @konradLeafTemperatureIts2021a].
+With adequate water, high $\lambda E$ can dissipate excess heat, particularly for smaller leaves (higher $g_b$) [@songTreeSurfaceTemperature2020; @dongBiophysicalHomoeostasisLeaf2017; @konradLeafTemperatureIts2021a; @leighInfluenceLeafSize2017; @leuzingerTreeSpeciesDiversity2007].
+However, when transpiration exceeds water supply, stomata close to conserve water, increasing $T_{leaf}$ [Fig. `r fig_leaf_T`e, @fauset_differences_2018].
+Therefore, at high solar radiation loads, latent cooling can maintain $T_{leaf}$ closer to $T_{air}$, but if stomatal opening is limited, solar radiation can drastically elevate $T_{leaf}$ above $T_{air}$, especially for larger leaves [@fauset_differences_2018; @songTreeSurfaceTemperature2020; @konradLeafTemperatureIts2021a].
 
 
 ### 2.2 Vertical gradients in leaf temperature
 
-The basic biophysical principles outlined above shape the tendency for $T_{leaf}$ to be elevated above $T_{air}$ across vertical gradients in closed-canopy forests.
-High radiation at the top of the vertical profile (Fig. `r fig_NEON_vertical`) implies that upper canopy leaves have much greater tendency for high $T_{leaf}-T_{air}$, such that they would be expected to be warmer than understory leaves under most conditions (Fig. `r fig_leaf_T`).
-However, higher wind speeds (Fig. `r fig_NEON_vertical`) reduce $T_{leaf}-T_{air}$ [Fig. `r fig_leaf_T`b, @niinemetsPhotosyntheticAcclimationSimultaneous2004; @bonan_ecological_2016]. 
+The bbiophysical principles outlined above determine how $T_{leaf}$ is above $T_{air}$ across vertical gradients in closed-canopy forests.
+High radiation in the upper canopy (Fig. `r fig_NEON_vertical`) implies that upper canopy leaves often have higher $T_{leaf}-T_{air}$, and thus are often warmer than understory leaves (Fig. `r fig_leaf_T`).
+However, higher wind speeds (Fig. `r fig_NEON_vertical`) reduce leaf-air temperature differences [Fig. `r fig_leaf_T`b, @niinemetsPhotosyntheticAcclimationSimultaneous2004; @bonan_ecological_2016]. 
 In addition, adaptive leaf traits that increase $g_b$ and $g_s$ (see sections 3, 4.1) mediate the direct effects of solar radiation on upper canopy leaves and result in higher rates of heat loss (Fig. `r fig_leaf_T`b-e). 
-In contrast, at lower heights along the vertical profile, greater RH and lower wind speeds may limit $\lambda E$ (through reduced $g_s$ and $g_b$), thereby increasing $T_{leaf}$ [Fig. `r fig_leaf_T`, @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979].
-Leaves in these normally-shaded locations experience rapid light and temperature surges (can exceed 10$^\circ$C) during sunflecks [@waySunflecksTreesForests2012].
+In contrast, in the lower canopy, greater RH and lower wind speeds may limit $\lambda E$ (through reduced VPD and $g_b$), increasing $T_{leaf}$ [Fig. `r fig_leaf_T`, @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979].
+Leaves in these normally-shaded locations experience rapid light and temperature surges during sunflecks (>10$^\circ$C)  [@waySunflecksTreesForests2012].
 
-The propensity for $T_{leaf}$ to be elevated above $T_{air}$ is not expected to be uniform across time and space, but rather to vary with micrometeorological conditions. Under drought conditions (hot and dry, with higher-than-average solar radiation), when $g_s$ is limiting, there will be a greater propensity for $T_{leaf} - T_{air}$ to be elevated in the upper canopy compared to the understory (Fig. `r fig_leaf_T`).
+Elevation of $T_{leaf}$ above $T_{air}$ is not uniform across time and space, but varies with micrometeorological conditions. During drought (hot and dry, with higher-than-average solar radiation), when $g_s$ is limiting, $T_{leaf} - T_{air}$ will tend to be elevated in the upper canopy compared to the understory (Fig. `r fig_leaf_T`).
 This is because sun leaves are exposed to higher irradiance and VPD, and therefore have stronger $g_s$ limitation than shade leaves [Fig. `r fig_leaf_T`e, @leighInfluenceLeafSize2017; @fauset_differences_2018]. 
-In contrast, under conditions conducive to stomatal opening, higher wind speeds and $g_b$ enable cooling in the upper canopy, whereas lower wind and $g_b$ in the understory allow much less evaporative cooling  [Fig. `r fig_leaf_T`b,d, @robertsStomatalBoundaryLayerConductances1990; @martin_boundary_1999; @leighInfluenceLeafSize2017;  @songTreeSurfaceTemperature2020]. 
+In contrast, under conditions conducive to stomatal opening, higher wind speeds and $g_b$ enable cooling in the upper canopy, limit evaporative cooling  [Fig. `r fig_leaf_T`b,d, @robertsStomatalBoundaryLayerConductances1990; @martin_boundary_1999; @leighInfluenceLeafSize2017;  @songTreeSurfaceTemperature2020]. 
 Thus, while understory and within-canopy shade leaves can remain cooler under lower radiation, their environment is less conducive to dissipating excess heat compared to upper-canopy leaves. 
-Limitations in heat dissipation, in combination with their physiological propensities, may cause shade leaves to experience above-optimal $T_{leaf}$ under slight heat or drought stress, or when exposed to higher levels of radiation, for example during sunflecks [@leighInfluenceLeafSize2017; @songTreeSurfaceTemperature2020; @schymanskiStomatalControlLeaf2013].
-In addition to lower wind speeds (Fig. `r fig_NEON_vertical`), higher RH in the understory and inner canopy (Fig. `r fig_NEON_vertical`) would also inhibit cooling, as $\lambda E$ is stifled under high RH, resulting in  greater $T_{leaf}$-$T_{air}$ [Fig. `r fig_leaf_T`c, @tibbittsHumidityPlants1979; @songTreeSurfaceTemperature2020;  @perezIncreasingHumidityThreatens2018; @konradLeafTemperatureIts2021a; @dietzVerticalPatternsDuration2007].
+Limitations in heat dissipation in shade leaves, together with physiological propensities, may cause above-optimal $T_{leaf}$ under slight heat or drought stress or during sunflecks [@leighInfluenceLeafSize2017; @songTreeSurfaceTemperature2020; @schymanskiStomatalControlLeaf2013].
+In addition to lower wind speeds (Fig. `r fig_NEON_vertical`), higher RH in the understory and inner canopy (Fig. `r fig_NEON_vertical`) also inhibits evaporative cooling by reducinf VPD, thus increasing $T_{leaf}$-$T_{air}$ [Fig. `r fig_leaf_T`c, @tibbittsHumidityPlants1979; @songTreeSurfaceTemperature2020;  @perezIncreasingHumidityThreatens2018; @konradLeafTemperatureIts2021a; @dietzVerticalPatternsDuration2007].
 
 Vertical $T_{leaf}$ gradients are also expected to vary with canopy structure (Fig. `r fig_leaf_T`). 
-Forests with closed canopies and high LAI, including tropical and temperate broadleaf forests, act as a parasol, absorbing most of the incoming radiation and preventing vertical air mixing in the understory. 
-Therefore, in these forests, leaves in the upper canopy can experience greater $T_{leaf}-T_{air}$ and higher maximum $T_{leaf}$ than do lower-canopy leaves, in some cases exceeding the optima for photosynthesis ($T_{opt}$) because of $g_s$ limitation and high solar radiation loads [@carterExperimentalWarmingTropical2021; <!--@niinemetsShapeLeafPhotosynthetic1999-->; @doughtyAreTropicalForests2008; <!--@fauset_differences_2018-->; @mauTemperateTropicalForest2018; @millerOnlySunlitLeaves2021; <!--@rey-sanchez_spatial_2016; @pauTropicalForestTemperature2018-->]. 
-In contrast, open canopies with lower LAI allow more vertical air mixing and sunlight into the understory. 
-This mixing and light transmission can either neutralize a $T_{leaf}$ gradient or elevate $T_{leaf}-T_{air}$ at lower heights relative to the upper canopy [Fig. `r fig_NEON_vertical`h, Supporting Information Figure `r SIfig_NEON_all`, <!--@hadleyInfluenceKrummholzMat1987-->; @mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002]. 
-The latter can result from a combination of still air at lower heights (Fig. `r fig_NEON_vertical`e), and sunflecks or the 'canopy greenhouse effect', as mentioned above [@hardwickRelationshipLeafArea2015; @schymanskiStomatalControlLeaf2013], and because shade leaves tend to have lower $g_s$  [@schymanskiStomatalControlLeaf2013]. 
-Similarly, in very open forests or savannas, trees growing close to the ground can experience greater heat stress in their lower than upper canopies due to heat from the soil increasing the $T_{leaf}$ of the foliage close to the ground [Fig. `r SIfig_NEON_all`, @hadleyInfluenceKrummholzMat1987; @curtis_intracanopy_2019; @johnstonWhatLiesVerticalinpress]. 
-One of the few remote sensing studies combining drone lidar and thermal data found strong vertical gradients in midday plant temperature with ~5$^{\circ}$C cooler temperatures lower in the vertical profile of a dense forest stand in the sub-alpine Eastern Swiss Alps [@websterThreedimensionalThermalCharacterization2018]. 
-However, the opposite trend was observed for a lone tree surrounded by grass in a California open oak woodland, with cooler temperatures at the top of the tree crown, indicating a strong influence of closed-canopy shading on vertical temperature gradients [@johnstonWhatLiesVerticalinpress]. 
+Forests with closed canopies and high LAI, including tropical and temperate broadleaf forests, act as a parasol, absorbing most incoming radiation and preventing vertical air mixing in the understory. 
+Therefore, in these forests, leaves in the upper canopy can experience greater $T_{leaf}-T_{air}$ and higher maximum $T_{leaf}$ than lower-canopy leaves, in some cases exceeding photosynthetic temperature optima ($T_{opt}$) because of $g_s$ limitation and high radiation [@carterExperimentalWarmingTropical2021; <!--@niinemetsShapeLeafPhotosynthetic1999-->; @doughtyAreTropicalForests2008; <!--@fauset_differences_2018-->; @mauTemperateTropicalForest2018; @millerOnlySunlitLeaves2021; <!--@rey-sanchez_spatial_2016; @pauTropicalForestTemperature2018-->]. 
+In contrast, open canopies with lower LAI allow more vertical air mixing and sunlight into the understory, which can either neutralize a $T_{leaf}$ gradient or elevate $T_{leaf}-T_{air}$ at lower heights relative to the upper canopy [Fig. `r fig_NEON_vertical`h, Supporting Information Figure `r SIfig_NEON_all`; <!--@hadleyInfluenceKrummholzMat1987--> @mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002]. 
+The latter can result from a combination of still air at lower heights (Fig. `r fig_NEON_vertical`e), and sunflecks or the 'canopy greenhouse effect', as mentioned above [@hardwickRelationshipLeafArea2015; @schymanskiStomatalControlLeaf2013], and because shade leaves tend to have lower $g_s$  [@schymanskiStomatalControlLeaf2013]. Similarly, in very open forests or savannas, trees growing close to the ground can experience greater heat stress in their lower than upper canopies due to heat from the soil increasing $T_{leaf}$ of foliage near the ground [Fig. `r SIfig_NEON_all`, @hadleyInfluenceKrummholzMat1987; @curtis_intracanopy_2019; @johnstonWhatLiesVerticalinpress]. 
+One of the few remote sensing studies combining drone lidar and thermal data found strong vertical gradients in midday plant temperature with ~5$^{\circ}$C cooler temperatures lower in the vertical profile of a dense subalpine stand in the alpine Eastern Swiss Alps [@websterThreedimensionalThermalCharacterization2018]. 
+However, the opposite trend was observed for a lone tree surrounded by grass in a California open oak woodland, with cooler temperatures at the top of the crown, indicating a strong influence of closed-canopy shading on vertical temperature gradients [@johnstonWhatLiesVerticalinpress]. 
 
 ## 3. Leaf traits 
 
