--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -266,10 +266,10 @@ Yet, while these studies have clarified many details of leaf differences through
 Rather, much of our understanding of trait coordination is based on the leaf economics spectrum concept developed across diverse species using sun leaves [@wrightWorldwideLeafEconomics2004; @keenanGlobalLeafTrait2016; @chenLeafEconomicsSpectrum2020]. 
 As canopy shade is known to alter these trait relationships [@osnasDivergentDriversLeaf2018], further research is needed to characterize trait relationships and responses vertically through the full range of canopy microenvironments.
 
-Across the vertical gradient, traits vary (1) within individuals, across height and light gradients [e.g., @zwienieckiHydraulicLimitationsImposed2004; @sackHowStrongIntracanopy2006; @binLeafTraitExpression2022], (2) across individuals of the same species, often representing an ontogenetic trajectory from the understory to the canopy [e.g., @carterExperimentalWarmingTropical2021; @niinemetsResponsesForestTrees2010], and (3) across understory and canopy species [e.g., @lloydOptimisationPhotosyntheticCarbon2010]. 
-The majority of studies characterizing variation in leaf traits or metabolism examine intraspecific patterns (categories 1 and 2), which are therefore the main focus of this review (Table `r table_leaf_traits`).
-Generally, the pattern of fundamental trait adaptations to light gradients across forest species is similar to within-species trends in traits and sometimes metabolism [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @binLeafTraitExpression2022; @cavaleri_height_2010; @lloydOptimisationPhotosyntheticCarbon2010]; however, vertical trends vary across trees [@lloydOptimisationPhotosyntheticCarbon2010], and counter-gradient variation can exist [e.g., @luskWhyAreEvergreen2008].
-Overall, when it comes to understanding and modeling forest ecosystem function, many leaf physiological parameters can be estimated based on foliage height profiles [e.g., @cavaleri_height_2010; @lloydOptimisationPhotosyntheticCarbon2010].
+Across the vertical gradient, traits vary (1) within individuals, across height and light gradients [e.g., @zwienieckiHydraulicLimitationsImposed2004; @sackHowStrongIntracanopy2006; @binLeafTraitExpression2022], (2) across individuals of the same species, often representing an ontogenetic trajectory from the understory to the canopy [e.g., @carterExperimentalWarmingTropical2021; @niinemetsResponsesForestTrees2010], and (3) among understory and canopy species [e.g., @lloydOptimisationPhotosyntheticCarbon2010]. 
+Most studies characterizing variation in leaf traits or metabolism examine intraspecific patterns (categories 1 and 2), which are therefore the main focus of this review (Table `r table_leaf_traits`).
+Generally, the pattern of fundamental trait adaptations to light gradients across forest species is similar to within-species trends [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @binLeafTraitExpression2022; @cavaleri_height_2010; @lloydOptimisationPhotosyntheticCarbon2010]; however, vertical trends vary across trees [@lloydOptimisationPhotosyntheticCarbon2010], and counter-gradient variation can exist [e.g., @luskWhyAreEvergreen2008].
+Many leaf physiological parameters can be estimated based on foliage height profiles [e.g., @cavaleri_height_2010; @lloydOptimisationPhotosyntheticCarbon2010].
 
 \newpage
 **Table `r table_leaf_traits`.** Summary of typically observed variation in leaf traits and its thermal sensitivity across the vertical gradient and/or between sun and shade leaves. Studies listed here were compiled using a systematic review process, as described in Supplementary Information Methods `r appendix_lit_review_methods`.
