--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -297,13 +297,13 @@ $\ddagger$ 1. Mau et al. 2018; 2. Coble and Cavaleri 2014; 3. Sack et al. 2006; 
 
 ## 3.1 Leaf anatomy and morphology
 
-Sun leaves have anatomical, morphological, and physiological traits that reduce heat due to higher conductance ($g_b$ or maximal $g_s$) and/or reflectance, which help to lower $T_{leaf}$-$T_{air}$ (Table `r table_leaf_traits`). 
-Thus, sun leaves are generally smaller and thicker, with higher leaf mass per area, and are more deeply lobed [Fig. `r fig_leaf_T`, @vogelSunLeavesShade1968; @zwienieckiHydraulicLimitationsImposed2004; @sackHowStrongIntracanopy2006; @leighInfluenceLeafSize2017], but with greater leaf packing and clumping (which reduces $g_b$).
-Steeper leaf angles reduce mid-day radiation loads and thereby decrease $T_{leaf}-T_{air}$ [@niinemetsAdjustmentFoliageStructure1998; @ballMaintenanceLeafTemperature1988], while higher trichome density increases reflectance, thereby also decreasing radiation load.
-Further, sun leaves tend to have higher stomatal and vein densities, which enable higher maximal $g_s$ and thereby facilitate effective cooling [see section 4.1, @zwienieckiHydraulicLimitationsImposed2004]. 
-At the same time, sun leaves also have adaptations to protect against water stress, particularly in drier climates, including greater cuticle thickness and higher trichome density [reduces $g_b$ or increases boundary layer turbulence, @schreuderModelledInfluencesNonexchanging2001; @ichieEcologicalDistributionLeaf2016a].
-In contrast, shade leaves have traits that maximize light capture in the diffuse-light environment with sunflecks (e.g., lower LMA and higher light absorptance efficiency per unit biomass), but larger leaf size and lower transpiration makes them more prone to overheating than sun leaves [@leighInfluenceLeafSize2017; @casasSunShadeLeaves2011; @schymanskiStomatalControlLeaf2013]. 
-In open canopies, where light is comparatively homogeneous, leaf traits may be more shaped by maximum $T_{air}$ and VPD stress than by light [@mediavillaFoliarPlasticityRelated2019a].
+Sun leaves have anatomical, morphological, and physiological traits that reduce $T_{leaf}$ through higher conductance ($g_b$ or maximal $g_s$) and/or reflectance (Table `r table_leaf_traits`). 
+Thus, sun leaves are generally smaller and thicker, with higher LMA, and are more deeply lobed [Fig. `r fig_leaf_T`, @vogelSunLeavesShade1968; @zwienieckiHydraulicLimitationsImposed2004; @sackHowStrongIntracanopy2006; @leighInfluenceLeafSize2017], but with greater leaf packing and clumping (which reduces $g_b$).
+Steeper leaf angles reduce mid-day radiation loads and thereby decrease $T_{leaf}-T_{air}$ [@niinemetsAdjustmentFoliageStructure1998; @ballMaintenanceLeafTemperature1988], while higher trichome density increases reflectance, also decreasing radiation load.
+Further, sun leaves tend to have higher stomatal and vein densities, which fascilitate evaporative cooling by enabling higher $g_s$ [see section 4.1, @zwienieckiHydraulicLimitationsImposed2004]. 
+Yet sun leaves also have adaptations to limit water stress, particularly in drier climates, including greater cuticle thickness and higher trichome density [which may reduce or increase $g_b$; @schreuderModelledInfluencesNonexchanging2001; @ichieEcologicalDistributionLeaf2016a].
+In contrast, shade leaves have traits that maximize light capture (e.g., lower LMA and greater light absorptance per unit biomass), but larger leaves and lower transpiration make them more prone to overheating than sun leaves [@leighInfluenceLeafSize2017; @casasSunShadeLeaves2011; @schymanskiStomatalControlLeaf2013]. 
+In open canopies, where light is comparatively homogeneous, leaf traits may be shaped more by maximum $T_{air}$ and VPD stress than by light [@mediavillaFoliarPlasticityRelated2019a].
 
 ## 3.2. Leaf optical properties
 Leaf optical properties are influenced by a combination of anatomical, morphological, and biochemical traits, all of which vary throughout the canopy, as outlined in sections 3.1 and 3.3.
