--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -350,19 +350,19 @@ Given current understanding, we may hypothesize that light-dependent VOC emissio
 ## 3.5. Thermal tolerance
 
 <!--short par giving background on thermal tolerance-->
-The upper thermal thresholds for leaf survival can be approximated by assessing the photosystem II functioning using chlorophyll fluorescence techniques [@krauseHightemperatureToleranceTropical2010]. 
-At very high $T_{leaf}$ (~40-60$^{\circ}$C), photosystem II incurs irreversible damage, eventually leading to leaf necrosis and death [@bakerChlorophyllFluorescenceProbe2008; @feeley_thermal_2020; @kunertSummerTemperaturesReachinpress]. 
-Thermal tolerance is described in terms of the temperature at which efficiency of photosystem II starts to decrease, $T_{crit}$, and the $T_{leaf}$ at which efficiency of photosystem II had decreased by 50%, $T_{50}$ [e.g., @slotLeafHeatTolerance2021]. 
-Thermal tolerances vary across species, being more closely linked to leaf traits than phylogeny [@feeley_thermal_2020; @slotLeafHeatTolerance2021]<!--; for example, among tropical species, $T_{crit}$ and $T_{50}$ were found to be high in species with large leaves with high thermal capacitance and those with high LMA, respectively [@slotLeafHeatTolerance2021]-->, and with higher thermal tolerance among leaves that experience higher maximum temperatures [@perezPhotosyntheticHeatTolerances2020].
+Upper thermal thresholds for leaf survival can be approximated by assessing the photosystem II functioning via using chlorophyll fluorescence techniques [@krauseHightemperatureToleranceTropical2010]. 
+Very high $T_{leaf}$ (~40-60$^{\circ}$C) irreversibly damages photosystem II, leading to leaf necrosis and death [@bakerChlorophyllFluorescenceProbe2008; @feeley_thermal_2020; @kunertSummerTemperaturesReachinpress]. 
+Thermal tolerance is described in terms of the $T_{leaf}s$ at which photosystem II efficiency starts to decrease ($T_{crit}$) is reduced by 50%, $T_{50}$ [e.g., @slotLeafHeatTolerance2021]. 
+Thermal tolerances vary across species, being more closely linked to leaf traits than phylogeny [@feeley_thermal_2020; @slotLeafHeatTolerance2021]<!--; for example, among tropical species, $T_{crit}$ and $T_{50}$ were found to be high in species with large leaves with high thermal capacitance and those with high LMA, respectively [@slotLeafHeatTolerance2021]-->, and being greater in leaves that experience higher maximum temperatures [@perezPhotosyntheticHeatTolerances2020].
 $T_{50}$ and $T_{crit}$ decrease across increasing latitudes, and with elevation among tropical forests [@feeley_thermal_2020;  @slotLeafHeatTolerance2021; @osullivanThermalLimitsLeaf2017].
-However, they appear to be are more closely adapted to microclimate than macroclimate [@feeley_thermal_2020; @slotLeafHeatTolerance2021]. 
+However, they appear more closely adapted to microclimate than macroclimate [@feeley_thermal_2020; @slotLeafHeatTolerance2021]. 
 <!--For example, *Quercus muehlenbergii* Engelm. growing in xeric, sunnier conditions showed higher $T_{50}$ by $2{^\circ}C$ than *Quercus macrocarpa* Michx. growing in shaded mesic conditions [@hamerlynckPhotosyntheticStomatalResponses1996a]. (removed because I had trouble finding this in the paper, plus it's not really needed, but feel free to reinstate) -->
 
 <!--par on thermal tolerance across vertical gradients-->
-Based on their variation with the temperatures experienced by leaves, thermal tolerance metrics are hypothesized to be greatest for the leaves that face the greatest radiation and highest temperatures along the vertical gradient. 
+Thermal tolerance metrics are hypothesized to be greatest for the leaves with the greatest radiation loads and highest temperatures along the vertical gradient. 
 Indeed, considering sun and shade leaf differences across the vertical profile of a closed-canopy forest in Panama, $T_{50}$ was 0.7 - 1.4$^\circ$C lower for shade than sun leaves for two of three tree species [Table `r table_leaf_traits`, @slotPhotosyntheticHeatTolerance2019]. 
-Similarly, along a vertical gradient within a very open canopy in Australia, where trees of *Acacia papyrocarpa* Benth. faced the greatest composite climate stress (low wind speed, greater radiation and $T_{air}$, and lower rates of heat dissipation) in the lower, north-facing portions of their crowns, $T_{50}$ was highest in these positions, *albiet* by <1$^\circ$C [Table `r table_leaf_traits`, @curtis_intracanopy_2019]. 
-These modest difference in $T_{50}$ coupled with larger differences in $T_{leaf}$ across thermal microenvironments imply that more thermally tolerant sun leaves tend to operate closer to their thermal limits and could therefore be more vulnerable to heat anomalies [@perezPhotosyntheticHeatTolerances2020].
+Similarly, within a very open canopy in *Acacia papyrocarpa* Benth. canopy, $T_{50}$ was highest (*albiet* by <1$^\circ$C) in the lower, north-facing leaves, which faced the greatest composite climate stress (low wind speed, greater radiation and $T_{air}$, and lower rates of heat dissipation) [Table `r table_leaf_traits`, @curtis_intracanopy_2019]. 
+These modest differences in $T_{50}$ coupled with larger differences in $T_{leaf}$ across thermal microenvironments imply that more thermally tolerant sun leaves tend to operate closer to their thermal limits and could therefore be more vulnerable to heat anomalies [@perezPhotosyntheticHeatTolerances2020].
 However, not enough studies have evaluated thermal tolerances across vertical gradients to make robust inferences.
 
 ## 3.6. Leaf phenology
@@ -370,13 +370,13 @@ However, not enough studies have evaluated thermal tolerances across vertical gr
 Leaf phenology likely influences the vertical structure of microenvironments, $T_{leaf}$, and forest photosynthetic capacity [@rey-sanchez_spatial_2016]. 
 In deciduous forests, the timing and extent of seasonal leaf gain and loss is structured across the vertical profile. 
 In temperate deciduous forests, seasonal warming occurs earlier in the sheltered understory, facilitating earlier spring bud-break compared to the cooler upper canopy [@augspurgerDifferencesLeafPhenology2003]. 
-Early leaf-out gives tree saplings and seedlings a window for disproportionately high photosynthesis -- amounting to the majority of annual carbon fixation for some seedlings -- before canopy foliage and reduces light availability [@augspurgerDifferencesLeafPhenology2003; @leeSpringPhenologicalEscape2021]. 
-Within tropical dry-season-deciduous species, the fraction of seasonally deciduous individuals has been found to increase toward larger tree size classes in hotter, brighter environments, with understory individuals typically remaining evergreen [@conditQuantifyingDeciduousnessTropical2000c].
-Similarly, on the interspecific level, across increasing tree size classes, there is an increase in the fractions of deciduous species [@conditQuantifyingDeciduousnessTropical2000c; @meakemRoleTreeSize2018].
-Even in evergreen tropical forests, seasonal variation in leaf quantities follows distinct patterns throughout the vertical profile depending on height and light environments [@smithSeasonalDroughtrelatedChanges2019;@tangLightdrivenGrowthAmazon2017;@nunesForestFragmentationImpacts2022]. 
+Early leaf-out gives saplings and seedlings a window for disproportionately high photosynthesis -- contributing the majority of annual carbon fixation for some seedlings -- before canopy foliage and reduces light availability [@augspurgerDifferencesLeafPhenology2003; @leeSpringPhenologicalEscape2021]. 
+Within tropical dry-season-deciduous species, the fraction of seasonally deciduous individuals is greater in larger trees in hotter, brighter environments, with understory individuals typically remaining evergreen [@conditQuantifyingDeciduousnessTropical2000c].
+Similarly, fractions of deciduous species increase with tree size class [@conditQuantifyingDeciduousnessTropical2000c; @meakemRoleTreeSize2018].
+Even in evergreen tropical forests, seasonal variation in leaf quantities follows distinct vertical patterns throughout the vertical profile depending on height and light environments [@smithSeasonalDroughtrelatedChanges2019;@tangLightdrivenGrowthAmazon2017;@nunesForestFragmentationImpacts2022]. 
 For instance, in a central Amazonian forest, the upper canopies of both interior and edge forests shed leaves when maximum daily $T_{air}$ exceeded ~35$^\circ$C [@nunesForestFragmentationImpacts2022].
-Leaf turnover is faster in the upper canopy than the understory [@osadaLeafDynamicsMaintenance2001], and as a result upper canopy leaves are, on average, younger than shade leaves.
-Leaf age distributions affect forest photosynthetic capacity [@wuLeafDevelopmentDemography2016; @niinemetsLeafAgeDependent2016] and stress tolerance via age specific leaf function [@albertAgedependentLeafPhysiology2018; @kikuzawaSynthesisRelationshipsLeaf2006; @mariasImpactsLeafAge2017; @zhouLeafageEffectsTemperature2015].
+Beacsue leaf turnover is faster in the upper canopy than the understory [@osadaLeafDynamicsMaintenance2001], and as a result upper canopy leaves are, on average, younger than shade leaves.
+Leaf age distributions affect forest photosynthetic capacity [@wuLeafDevelopmentDemography2016; @niinemetsLeafAgeDependent2016] and stress tolerance via age specific leaf function [@albertAgedependentLeafPhysiology2018; @kikuzawaSynthesisRelationshipsLeaf2006; <!--@mariasImpactsLeafAge2017;--> @zhouLeafageEffectsTemperature2015].
 Leaf phenology thereby both responds to and influences the vertical structure of forest microenvironments and function.
 
 
