--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1574,6 +1574,25 @@
   file = {/Users/nidhivinod/Zotero/storage/3GFXB6B5/Buckley - 2021 - Optimal carbon partitioning helps reconcile the ap.pdf;/Users/nidhivinod/Zotero/storage/5CIR4SCL/nph.html}
 }
 
+@article{buckleyStomatalConductanceOptimized2014,
+  title = {Is Stomatal Conductance Optimized over Both Time and Space in Plant Crowns? {{A}} Field Test in Grapevine ({{Vitis}} Vinifera)},
+  shorttitle = {Is Stomatal Conductance Optimized over Both Time and Space in Plant Crowns?},
+  author = {Buckley, Thomas N. and Martorell, Sebastia and Diaz-Espejo, Antonio and Tomàs, Magdalena and Medrano, Hipólito},
+  date = {2014-12},
+  journaltitle = {Plant Cell Environ},
+  volume = {37},
+  number = {12},
+  eprint = {24689930},
+  eprinttype = {pmid},
+  pages = {2707--2721},
+  issn = {1365-3040},
+  doi = {10.1111/pce.12343},
+  abstract = {Crown carbon gain is maximized for a given total water loss if stomatal conductance (gs ) varies such that the marginal carbon product of water (∂A/∂E) remains invariant both over time and among leaves in a plant crown, provided the curvature of assimilation rate (A) versus transpiration rate (E) is negative. We tested this prediction across distinct crown positions in situ for the first time by parameterizing a biophysical model across 14 positions in four grapevine crowns (Vitis vinifera), computing optimal patterns of gs and E over a day and comparing these to the observed patterns. Observed water use was higher than optimal for leaves in the crown interior, but lower than optimal in most other positions. Crown carbon gain was 18\% lower under measured gs than under optimal gs . Positive curvature occurred in 39.6\% of cases due to low boundary layer conductance (gbw ), and optimal gs was zero in 11\% of cases because ∂A/∂E was below the target value at all gs . Some conclusions changed if we assumed infinite gbw , but optimal and measured E still diverged systematically in time and space. We conclude that the theory's spatial dimension and assumption of positive curvature require further experimental testing.},
+  langid = {english},
+  keywords = {Atmosphere,boundary layer,Carbon,carbon water balance,Circadian Rhythm,Gases,Light,optimization,Photosynthesis,Plant Stomata,Plant Transpiration,stomata,Temperature,Time Factors,Vitis,water-use efficiency},
+  file = {/Users/nidhivinod/Zotero/storage/QKEZ3JR6/Buckley et al. - 2014 - Is stomatal conductance optimized over both time a.pdf}
+}
+
 @article{buckleyStomatalOptimisationRelation2014,
   title = {Stomatal Optimisation in Relation to Atmospheric {{CO2}}},
   author = {Buckley, Thomas N. and Schymanski, Stanislaus J.},
